# alephic-ai_skref

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  action.yml
.github/workflows/: ci.yml  publish-crate.yml  validate-skills.yml
doc/: library.md  releasing.md
examples/invalid-skills/Bad_Name/: SKILL.md
examples/invalid-skills/missing-fields/: SKILL.md
sample-skills/git-commit-helper/: SKILL.md
sample-skills/hello-world/: SKILL.md
sample-skills/pdf-processing/references/: forms.md
sample-skills/pdf-processing/scripts/: extract.py
sample-skills/перевод/: SKILL.md
src/: constants.rs  errors.rs  lib.rs  main.rs  models.rs  options.rs  parser.rs  prompt.rs  validator.rs  yaml.rs
tests/: parser.rs  prompt.rs  sample_skills.rs  validator.rs
tests/fixtures/claude-skills/claude-everything/: SKILL.md
tests/fixtures/claude-skills/claude-pr-reviewer/: SKILL.md
tests/fixtures/sample-skills/pdf-processing/: SKILL.md
